--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,14 @@
   <%= @user.email %>
 </p>
 
+<% if @user.messages.first %>
+
+	<p>
+	  <strong>First Message:</strong>
+	  <%= @user.messages.first.content %>
+	</p>
+
+<% end %>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
