--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,6 @@
-<%= form_for(user) do |f| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_for(user, url: signup_path) do |f| %>
+  
+  <%= render "shared/error_messages" %>
 
   <div class="field">
     <%= f.label :name %>
@@ -32,6 +23,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create my account", class: "btn btn-primary" %>
   </div>
 <% end %>
