--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Register') %>
 
-<h1>Register as a new user</h1>
+<h1>New users can register</h1>
 
 <%= render 'form', user: @user %>
